<resources>
    <string name="app_name">synco</string>
    <string name="welcome">Welcome to SyncO</string>
    <string name="create_account">Enter or create an account in a few easy steps</string>


    <string name="prompt_name">Name</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Log in</string>
    <string name="logout">Logout</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reg_const">"I’m new, sign me up"</string>

    <string name="auth_question_register">Already have an account?</string>
    <string name="auth_question_login">don\'t have an account?</string>
    <string name="password">"password"</string>
    <string name="password_error_message">Passwords must be at least 8 characters</string>
    <string name="email_error_message">Email address is not valid</string>
    <string name="email">email</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="lname">Last Name</string>
    <string name="warning">If you’re experiencing serious symptoms, Please contact emergency services</string>

    <string name="info_diagnose">Cervical spondylosis is a general term for age-related wear and tear affecting the spinal disks in your neck. As the disks dehydrate and shrink, signs of osteoarthritis develop, including bony projections along the edges of bones (bone spurs).</string>

    <string name="lorem">Get insights into your well-being and track your progress towards a healthier life.</string>
    <string name="home">
        How are you feeling today?  \nLet’s start a health \nassesment
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_article">Article</string>
</resources>